--- a/projekt/vorlagen/index.html
+++ b/projekt/vorlagen/index.html
@@ -18,7 +18,33 @@
 <body>
 
     <div id="seite">
-        <h2>Hello World!</h2>
+        <h2>Tetromino im Bewegung</h2>
+
+        <article class="beschreibung">
+            <p>Als ester Schritt in Richtung Steuerung binden wir die Tastatur an, um ein Baustein im Raster zu bewegen.</p>
+            <p>
+                <strong>TODO:</strong> 
+                Implementiere die fehlenden Kompomenten im Code, sodass du mit dem Pfeilen den Tetromino steuern kannst.<br>
+            </p>
+
+        </article>
+
+        <div class="container">
+            
+            <section class="spalte welt">
+                <div id="welt" class="raster"></div>
+            </section>
+
+            <section class="spalte auswahl">
+                <label class="eingabe-beschreibung" id="tetro-zeile">Zeile: <span></span></label>
+                <br>
+                <label class="eingabe-beschreibung" id="tetro-spalte">Spalte: <span></span></label>
+                <br>
+                <button class="btn" onclick="reset()">Wiederherstellen</button>
+            </section>
+
+            
+        </div>
     </div>
 
 </body>
