[Aufgabe 7] Tetrominos drehen

--- a/projekt/vorlagen/index.html
+++ b/projekt/vorlagen/index.html
@@ -18,7 +18,32 @@
 <body>
 
     <div id="seite">
-        <h2>Hello World!</h2>
+        <h2>Tetromino drehen</h2>
+
+        <article class="beschreibung">
+            <p>Damit die Tetrominos besser gestappeln werden können mussen diese gedreht werden.</p>
+            <p>
+                <strong>TODO:</strong> 
+                Implementiere eine Methode `drehen` in der Klasse Tetromino. 
+                Vergiss nicht die Steuerung zu erweitern, sodass mit den Tasten 'Pfeil nach oben' oder 'Leerzeichen' die Steine gedreht werden.
+            </p>
+
+        </article>
+
+        <div class="container">
+            
+            <section class="spalte welt">
+                <div id="welt" class="raster"></div>
+            </section>
+
+            <section class="spalte auswahl">
+                <label class="eingabe-beschreibung" id="tetro-zeile">Zeile: <span></span></label>
+                <br>
+                <label class="eingabe-beschreibung" id="tetro-spalte">Spalte: <span></span></label>
+            </section>
+
+            
+        </div>
     </div>
 
 </body>
