[Aufgabe 9] farbige Tetrominos

--- a/projekt/vorlagen/index.html
+++ b/projekt/vorlagen/index.html
@@ -18,7 +18,31 @@
 <body>
 
     <div id="seite">
-        <h2>Hello World!</h2>
+        <h2>Farbige Tetromino</h2>
+
+        <article class="beschreibung">
+            <p>Unicolor? Bereits in den schwarzweiße Versionen von Tetris konnte man die Bausteine im Stil voneinander unterscheiden.</p>
+            <p>
+                <strong>TODO:</strong> 
+                Behebe den Fehler in der Funktion `weltRasterAktualisieren` damit die Bausteine farbig angezeigt werden.
+            </p>
+
+        </article>
+
+        <div class="container">
+            
+            <section class="spalte welt">
+                <div id="welt" class="raster"></div>
+            </section>
+
+            <section class="spalte auswahl">
+                <label class="eingabe-beschreibung" id="tetro-zeile">Zeile: <span></span></label>
+                <br>
+                <label class="eingabe-beschreibung" id="tetro-spalte">Spalte: <span></span></label>
+            </section>
+
+            
+        </div>
     </div>
 
 </body>
