[Aufgabe 10] gefüllte Zeilen Löschen
welt rechstsbündig

--- a/projekt/vorlagen/index.html
+++ b/projekt/vorlagen/index.html
@@ -18,7 +18,29 @@
 <body>
 
     <div id="seite">
-        <h2>Hello World!</h2>
+        <h2>Gefuellte Zeilen loeschen</h2>
+
+        <article class="beschreibung">
+            <p>Wenn lückenlose Zeilen abgelegt werden, sollen die Zeilen verschwinden und somit mehr Platz für neue Steine auf dem Feld entstehen.</p>
+            <p>
+                <strong>TODO:</strong> 
+                Implementieren die entsprechnde Methode `gefuellteZeilenLoeschen` in der Klasse Tetris.<br>
+                Vergiss nicht eine leere Zeile ganz oben hinzuzugügen. 
+            </p>
+        </article>
+
+        <div class="container">
+            
+            <section class="spalte welt">
+                <div id="welt" class="raster"></div>
+            </section>
+
+            <section class="spalte aktionen">
+                <div id="vorschau" class="raster"></div>
+            </section>
+
+            
+        </div>
     </div>
 
 </body>
