--- a/projekt/vorlagen/index.html
+++ b/projekt/vorlagen/index.html
@@ -18,7 +18,51 @@
 <body>
 
     <div id="seite">
-        <h2>Hello World!</h2>
+        <h2>Tetris Songs</h2>
+
+        <article class="beschreibung">
+            <p>Ohne Musik, keine Stimmung</p>
+            <p>
+                <strong>TODO:</strong> 
+                Die Musiktaste scheint kaputt zu sein, finde den Fehler in der Vorlage `index.html`.
+            </p>
+        </article>
+
+        <div class="container">
+            
+            <section class="spalte welt">
+                <div id="welt" class="raster"></div>
+            </section>
+
+            <section class="spalte aktionen">
+                <h2><span id="punkte" class="punkte">00000000</span> Score</h2>
+
+                <h2><span id="zeilen-total" class="punkte">00000000</span> Zeilen</h2>
+
+                <h2><span id="level" class="punkte">00000000</span> Level</h2>
+
+                <div id="vorschau" class="raster"></div>
+
+                <section id="steuerung">
+                    <button id="kamera-schalter" class="kreis-btn" onclick="kameraSchalterGedruckt()">
+                        <img class="aus" src="../bilder/twotone_videocam_off_black_48dp.png" alt="Video ausgeschaltet">
+                        <img class="an" src="../bilder/twotone_videocam_white_48dp.png" alt="Video eingeschaltet">
+                    </button>
+
+                    <!-- TODO: rufe die richtige Funktion um die Musik zu spielen -->
+                    <button id="musik-schalter" class="kreis-btn">
+                        <img class="aus" src="../bilder/twotone_volume_off_black_48dp.png" alt="Musik ausgeschaltet">
+                        <img class="an" src="../bilder/twotone_volume_up_white_48dp.png" alt="Musik eingeschaltet">
+                    </button>
+                </section>
+
+                <div id="gest"></div>
+            </section>
+
+            <audio loop id="tetris-song" controls="false">
+                <source src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Tetris_theme.ogg" type="audio/ogg">
+            </audio>
+        </div>
     </div>
 
 </body>
