update task goals

--- a/projekt/vorlagen/index.html
+++ b/projekt/vorlagen/index.html
@@ -18,14 +18,14 @@
 <body>
 
     <div id="seite">
-        <h2>Tetromino drehen</h2>
+        <h2>Tetromino ablegen</h2>
 
         <article class="beschreibung">
-            <p>Damit die Tetrominos besser gestappeln werden können mussen diese gedreht werden.</p>
+            <p>Die Bausteine werden jetzt immer nacheinander nach unten verschoben.
+                Leider bleiben sie nicht unten stehen sondern verschwinden sie immer wieder!</p>
             <p>
                 <strong>TODO:</strong> 
-                Implementiere eine Methode `drehen` in der Klasse Tetromino. 
-                Vergiss nicht die Steuerung zu erweitern, sodass mit den Tasten 'Pfeil nach oben' oder 'Leerzeichen' die Steine gedreht werden.
+                Aktualisiere das Spielfeldmatrix (`welt`) und setze die Werte des letzten Tetrominos ein.
             </p>
 
         </article>
@@ -42,7 +42,6 @@
                 <label class="eingabe-beschreibung" id="tetro-spalte">Spalte: <span></span></label>
             </section>
 
-            
         </div>
     </div>
 
